contrib/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cluster-odm
spec:
  selector:
    app: myapp
  ports:
  - port: <Port>
    targetPort: <Target Port>
